change up lg views a bit to prevent overlap

--- a/less/index.less
+++ b/less/index.less
@@ -1,6 +1,6 @@
 // Start here!
 body {
-	background:lightgrey;
+	background:#F1F3F5;
 }
 
 h1 {
@@ -62,6 +62,7 @@ h5 {
 		border-radius: 50%;
 		padding: 20px;
 		max-width: 240px;
+		height: 200;
 	}
 	.name {
 		width: 100%;
@@ -120,7 +121,7 @@ h5 {
 			.education {
 				width: 100%;
 				margin-top: 50px;
-				padding-left: 20px;
+				padding-left: 30px;
 				h4 {
 					margin-bottom: 2px;
 				}
